--- a/config/config.yml
+++ b/config/config.yml
@@ -17,5 +17,5 @@ content: content
 
 production:
   cache: true
-  content: /var/apps/nesta/shared/content
+  content: /var/apps/effectif.com/shared/content
   google_analytics_code: "UA-4055128-1"
