Removed full stop from end of subtitle.

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,5 +1,5 @@
 title: "Effectif Development"
-subtitle: "Graham Ashton on Ruby, Python, JavaScript and Web Development."
+subtitle: "Graham Ashton on Ruby, Python, JavaScript and Web Development"
 description: "Notes on the use of dynamic scripting languages for agile web development, covering Ruby on Rails, JavaScript and version control with git. Maintained by Graham Ashton."
 keywords: "Graham Ashton, ruby, javascript, web, git"
 
